@@ -5363,3 +5363,4 @@
   Entity.Definition.getProperties(includeHidden) removed
   Domain.define() now protected
   DefaultEntityLocalConnection, blob handling improved, blob property values are now fetched by default
+  Chinook demo, added blob image example
